# HW6

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
config/: .env.example
data/raw/: dataset.json
docs/: ARCHITECTURE.md  PRD.md
notebooks/: analysis.ipynb
src/prompt_engineering/: __init__.py  experiment.py  main.py
src/prompt_engineering/data/: __init__.py  dataset.py  models.py
src/prompt_engineering/evaluation/: __init__.py  embeddings.py  metrics.py
src/prompt_engineering/prompts/: __init__.py  strategies.py
src/prompt_engineering/utils/: __init__.py  config.py  llm_client.py
src/prompt_engineering/visualization/: __init__.py  plots.py
tests/: __init__.py  conftest.py  test_config.py  test_dataset.py  test_embeddings.py  test_metrics.py  test_models.py  test_strategies.py  test_visualization.py
